--- a/src/app/components/users/teacher/profile/profile.component.html
+++ b/src/app/components/users/teacher/profile/profile.component.html
@@ -133,6 +133,7 @@
                       <div class="card-footer p-4">
                         <div class="row">
                           <button
+                            [disabled]="isUploading"
                             class="btn btn-block btn-success"
                             matStepperNext
                           >
