--- a/src/app/components/users/teacher/course/assignments/assignments.component.html
+++ b/src/app/components/users/teacher/course/assignments/assignments.component.html
@@ -6,31 +6,36 @@
 <div class="col-sm-12">
   <mat-card>
     <div class="row">
-      <div class="col-sm-3">
+      <div class="col-sm-4">
         <mat-form-field>
           <mat-label>Choose Academy</mat-label>
-          <mat-select aria-disabled="!approvedAcademies">
+          <mat-select aria-disabled="!approvedRequests" [(ngModel)]="academyId">
             <mat-option
-              *ngFor="let academy of approvedAcademies"
-              [value]="academy.academyId"
-              (click)="getAcademyData(academy.academyId)"
-              >{{ academy.academyName }}</mat-option
+              *ngFor="let academy of approvedRequests; index as i"
+              [value]="academy[i].data.academyId"
+              (click)="getAcademyData(academy[i].data.academyId)"
+              >{{ academy[i].data.academyName | titlecase }}</mat-option
             >
           </mat-select>
         </mat-form-field>
       </div>
-      <div class="col-sm-3">
+      <div class="col-sm-4">
         <mat-form-field>
           <mat-label>Choose Classroom</mat-label>
-          <mat-select>
+          <mat-select [(ngModel)]="classroomId">
+            <!-- (click)="getSubjects(classroom.data.class.classId)" -->
             <mat-option>None</mat-option>
-            <mat-option *ngFor="let classroom of classrooms" (click)="getSubjects(classroom.data.class.classId)" >
+            <mat-option
+              *ngFor="let classroom of classrooms"
+              [value]="classroom.id"
+              (click)="getAssignments(classroom.id)"
+            >
               {{ classroom.data.class.className }}
             </mat-option>
           </mat-select>
         </mat-form-field>
       </div>
-      <div class="col-sm-3">
+      <!-- <div class="col-sm-3">
         <mat-form-field>
           <mat-label>Choose Subject</mat-label>
           <mat-select>
@@ -40,7 +45,7 @@
             </mat-option>
           </mat-select>
         </mat-form-field>
-      </div>
+      </div> -->
       <!-- <div class="col-sm-3">
         <mat-form-field>
           <mat-label>Assignment Title</mat-label>
@@ -78,16 +83,16 @@
         <input
           matInput
           (keyup)="applyFilter($event.target.value)"
-          placeholder="Filter"
+          placeholder="Assignment title"
         />
       </mat-form-field>
-      <div class="example-container">
+      <div class="container">
         <table mat-table [dataSource]="dataSource">
           <!-- Position Column -->
           <ng-container matColumnDef="assignmentNumber">
             <th mat-header-cell *matHeaderCellDef><strong>No.</strong></th>
             <td mat-cell *matCellDef="let element">
-              {{ element.assignmentNumber }}
+              {{ element.assignmentNumber + 1 }}
             </td>
           </ng-container>
 
@@ -102,13 +107,17 @@
           <!-- Weight Column -->
           <ng-container matColumnDef="addedDate">
             <th mat-header-cell *matHeaderCellDef><strong>Added On</strong></th>
-            <td mat-cell *matCellDef="let element">{{ element.addedDate }}</td>
+            <td mat-cell *matCellDef="let element">
+              {{ element.addedDate.toDate() | date: 'medium' }}
+            </td>
           </ng-container>
 
           <!-- Symbol Column -->
           <ng-container matColumnDef="dueDate">
             <th mat-header-cell *matHeaderCellDef><strong>Due Date</strong></th>
-            <td mat-cell *matCellDef="let element">{{ element.dueDate }}</td>
+            <td mat-cell *matCellDef="let element">
+              {{ element.dueDate.toDate() | date: 'medium' }}
+            </td>
           </ng-container>
 
           <ng-container matColumnDef="totalMarks">
@@ -118,10 +127,17 @@
             <td mat-cell *matCellDef="let element">{{ element.totalMarks }}</td>
           </ng-container>
 
-          <ng-container matColumnDef="controls">
+          <ng-container matColumnDef="fileURL">
+            <th mat-header-cell *matHeaderCellDef><strong>File URL</strong></th>
+            <td mat-cell *matCellDef="let element" class="text">
+              {{ element.fileURL }}
+            </td>
+          </ng-container>
+
+          <!-- <ng-container matColumnDef="controls">
             <th mat-header-cell *matHeaderCellDef><strong>Controls</strong></th>
             <td mat-cell *matCellDef="let element">{{ element.controls }}</td>
-          </ng-container>
+          </ng-container> -->
 
           <tr
             mat-header-row
@@ -204,7 +220,7 @@
                 <th>Obtained Marks</th>
                 <th>Total Marks</th>
                 <th>Status</th>
-                <th class="text-center">Controls</th>
+                <!-- <th class="text-center">Controls</th> -->
               </tr>
             </thead>
             <tbody>
