--- a/src/app/components/users/student/liveclass/liveclass.component.html
+++ b/src/app/components/users/student/liveclass/liveclass.component.html
@@ -3,21 +3,28 @@
     <div class="col-3">
       <input class="form-control" type="text" [(ngModel)]="roomToJoin" />
     </div>
-    <div class="col-2">
+    <!-- <div class="col-2">
       <button
         class="btn btn-outline-primary"
         (click)="sendMessage('Bismillah...')"
       >
         Send Message
       </button>
-    </div>
+    </div> -->
     <div class="col-2">
-      <button class="btn btn-outline-primary" (click)="joinClass()">
+      <button
+        class="btn btn-outline-primary"
+        (click)="joinClass(); initConnection(approvedRequests[0][0])"
+      >
         Join Class
       </button>
     </div>
-    <div class="col-4">
-      <button class="btn btn-info" (click)="askForPermission()">
+    <div class="col-4" *ngIf="!btnPermissionDisabled">
+      <button
+        class="btn btn-info"
+        (click)="askForPermission()"
+        [disabled]="btnPermissionDisabled"
+      >
         Request Permission For Question
       </button>
     </div>
