--- a/src/app/components/users/teacher/createassignment/createassignment.component.html
+++ b/src/app/components/users/teacher/createassignment/createassignment.component.html
@@ -1,1 +1,14 @@
+<div class="container">
+  <div class="row">
+    <div class="col-12">
+      <button
+        mat-button
+        class="float-right btn btn-success"
+        (click)="postAssignment()"
+      >
+        Post Assignment
+      </button>
+    </div>
+  </div>
+</div>
 <angular-editor [(ngModel)]="htmlContent" [config]="config"></angular-editor>
