--- a/src/app/components/users/teacher/liveclass/liveclass.component.html
+++ b/src/app/components/users/teacher/liveclass/liveclass.component.html
@@ -1,10 +1,53 @@
 <div class="container">
   <div class="row">
     <input class="form-control" type="text" [(ngModel)]="roomToCreate" />
-    <button class="btn btn-outline-info" (click)="creatingWebRtcConnection()">
-      Start
+    <button
+      class="btn btn-outline-info"
+      (click)="initConnection(approvedRequests[1][0])"
+    >
+      Start Class
     </button>
+    <!-- <button class="btn btn-outline-info" (click)="creatingWebRtcConnection()">
+      Send Answer
+    </button> -->
+    <button class="btn btn-outline-info" (click)="endClass()">
+      End Class
+    </button>
+    <div *ngIf="studentsCount">
+      Students taking class: <strong>{{ studentsCount }}</strong> .
+    </div>
     <br />
+  </div>
+  <!-- <div class="row" *ngIf="newRequest">
+    <button class="btn btn-outline-info" (click)="givePermission(true)">
+      Accept
+    </button>
+    <button class="btn btn-outline-info" (click)="givePermission(false)">
+      Reject
+    </button>
+  </div> -->
+  <br />
+  <div class="row">
+    <ul *ngFor="let request of questions">
+      <li>
+        Status: {{ request.permission }} | Student: {{ request.studentName }} |
+        <button
+          *ngIf="newRequest"
+          class="btn btn-outline-info"
+          (click)="givePermission(true)"
+        >
+          Accept
+        </button>
+        |
+        <button
+          *ngIf="newRequest"
+          class="btn btn-outline-info"
+          (click)="givePermission(false)"
+        >
+          Reject
+        </button>
+      </li>
+    </ul>
   </div>
   <br /><br />
   <div class="row">
@@ -12,9 +55,8 @@
       <video [src]="myVideo" controls autoplay muted #myVideo></video>
       <!-- *ngIf="displayMyVideo" -->
     </div>
-    <div class="col-6">
+    <!-- <div class="col-6">
       <video [src]="friendsVideo" controls autoplay #friendsVideo></video>
-      <!-- *ngIf="displayFriendsVideo" -->
-    </div>
+    </div> -->
   </div>
 </div>
