--- a/src/app/components/users/teacher/course/assignments/assignments.component.html
+++ b/src/app/components/users/teacher/course/assignments/assignments.component.html
@@ -129,8 +129,13 @@
 
           <ng-container matColumnDef="fileURL">
             <th mat-header-cell *matHeaderCellDef><strong>File URL</strong></th>
-            <td mat-cell *matCellDef="let element" class="text">
-              {{ element.fileURL }}
+            <td mat-cell *matCellDef="let element">
+              <a [href]="element.fileURL" download>
+                <span>
+                  <i class="text-success fa fa-download"> </i>
+                </span>
+              </a>
+              <!-- {{ element.fileURL }} -->
             </td>
           </ng-container>
 
