Academy admin class card json pipe removed

--- a/src/app/components/users/academyadmin/academyadmindashboard/academyadmindashboard.component.html
+++ b/src/app/components/users/academyadmin/academyadmindashboard/academyadmindashboard.component.html
@@ -66,7 +66,7 @@
               <li class="list-group-item bg-dark p-1">
                 <i class="icon-people"></i> Students :
                 <strong>
-                  {{class | json}}
+                  <!-- {{class | json}} -->
                   {{ class.data.students ? class.data.students.length : 0 }}
                 </strong>
               </li>
