--- a/src/app/components/users/academyadmin/academyadmindashboard/academyadmindashboard.component.html
+++ b/src/app/components/users/academyadmin/academyadmindashboard/academyadmindashboard.component.html
@@ -29,7 +29,10 @@
         <!-- <span><i class="text-dark fa fa-plus display-4"></i></span> -->
       </button>
     </div>
-    <div class="col-sm-6 col-md-4 col-lg-2" *ngFor="let class of classes">
+    <div
+      class="col-sm-6 col-md-4 col-lg-2"
+      *ngFor="let class of classes; index as i"
+    >
       <div class="card bg-dark">
         <div class="card-header h3 p-2">
           Class: {{ class.data.className }}
@@ -55,31 +58,31 @@
           <div>
             <ul class="list-group list-group-flush">
               <li class="list-group-item bg-dark p-1">
-                <i class="icon-notebook"></i
-                ><a href="www.google.com" target="_blank" class="text-white">
-                  Subjects :
-                  <strong>
-                    {{ class.data.subjects ? class.data.subjects.length : 0 }}
-                  </strong></a
-                >
+                <i class="icon-notebook"></i>
+                <!-- <a href="www.google.com" target="_blank" class="text-white"> -->
+                Subjects :
+                <strong>
+                  {{ class.data.subjects ? class.data.subjects.length : 0 }}
+                </strong>
+                <!-- </a> -->
               </li>
               <li class="list-group-item bg-dark p-1">
                 <i class="icon-people"></i> Students :
                 <strong>
-                  <!-- {{class | json}} -->
-                  {{ class.data.students ? class.data.students.length : 0 }}
+                  <!-- {{ students }} -->
+                  {{ students ? students[i] : 0 }}
                 </strong>
               </li>
               <li class="list-group-item bg-dark p-1">
                 <i class="icon-people"></i> Teachers :
                 <strong>
-                  {{ class.data.teachers ? class.data.teachers.length : 0 }}
+                  {{ teachers ? teachers[i] : 0 }}
                 </strong>
               </li>
               <li class="list-group-item bg-dark p-1">
                 <i class="icon-badge"></i> Classrooms :
                 <strong>
-                  {{ class.data.classrooms ? class.data.classrooms.length : 0 }}
+                  {{ classrooms ? classrooms[i] : 0 }}
                 </strong>
               </li>
             </ul>
