--- a/src/app/components/users/student/attemptquiz/attemptquiz.component.html
+++ b/src/app/components/users/student/attemptquiz/attemptquiz.component.html
@@ -23,53 +23,53 @@
 </div> -->
 
 <form [formGroup]="quizForm">
-    <!-- <hr />
+  <!-- <hr />
       <pre>value: {{ quizForm.value | json }}</pre>
       <hr /> -->
-    <div class="form-row">
-      <div class="col-md-2">
-        <mat-form-field>
-          <mat-label>Choose Academy</mat-label>
-          <mat-select
-            aria-disabled="!approvedRequests"
-            [(ngModel)]="academyId"
-            [ngModelOptions]="{ standalone: true }"
+  <div class="form-row">
+    <div class="col-md-2">
+      <mat-form-field>
+        <mat-label>Choose Academy</mat-label>
+        <mat-select
+          aria-disabled="!approvedRequests"
+          [(ngModel)]="academyId"
+          [ngModelOptions]="{ standalone: true }"
+        >
+          <mat-option
+            *ngFor="let academy of approvedRequests; index as i"
+            [value]="academy[i].data.academyId"
+            (click)="getAcademyData(academy[i].data.academyId)"
+            >{{ academy[i].data.academyName | titlecase }}</mat-option
           >
-            <mat-option
-              *ngFor="let academy of approvedRequests; index as i"
-              [value]="academy[i].data.academyId"
-              (click)="getAcademyData(academy[i].data.academyId)"
-              >{{ academy[i].data.academyName | titlecase }}</mat-option
-            >
-          </mat-select>
-        </mat-form-field>
-      </div>
-      <div class="col-md-3">
-        <mat-form-field>
-          <mat-label>Choose Classroom</mat-label>
-          <mat-select
-            [(ngModel)]="classroomId"
-            [ngModelOptions]="{ standalone: true }"
+        </mat-select>
+      </mat-form-field>
+    </div>
+    <div class="col-md-3">
+      <mat-form-field>
+        <mat-label>Choose Classroom</mat-label>
+        <mat-select
+          [(ngModel)]="classroomId"
+          [ngModelOptions]="{ standalone: true }"
+        >
+          <!-- (click)="getSubjects(classroom.data.class.classId)" -->
+          <mat-option>None</mat-option>
+          <mat-option
+            *ngFor="let classroom of classrooms; index as i"
+            [value]="classroom"
+            (click)="getQuizzes(classroom)"
           >
-            <!-- (click)="getSubjects(classroom.data.class.classId)" -->
-            <mat-option>None</mat-option>
-            <mat-option
-              *ngFor="let classroom of classrooms; index as i"
-              [value]="classroom"
-              (click)="getQuizzes(classroom)"
-            >
-              {{ classroom.data.class.className }}
-            </mat-option>
-          </mat-select>
-        </mat-form-field>
-      </div>
-      <div class="col-md-3">
-        <mat-form-field class="p-0">
-          <mat-label>Title</mat-label>
-          <input matInput type="text" formControlName="title" />
-        </mat-form-field>
-      </div>
-      <!-- <div class="col-md-3">
+            {{ classroom.data.class.className }}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+    </div>
+    <div class="col-md-3">
+      <mat-form-field class="p-0">
+        <mat-label>Title</mat-label>
+        <input matInput type="text" formControlName="title" disabled="true" />
+      </mat-form-field>
+    </div>
+    <!-- <div class="col-md-3">
         <div class="form-group">
               <mat-form-field>
                 <mat-label>Quiz duration (min)</mat-label>
@@ -77,86 +77,92 @@
               </mat-form-field>
             </div>
       </div> -->
-      <div class="col-md-3">
-        <div class="form-group">
-          <mat-form-field>
-            <mat-label>Total Marks</mat-label>
-            <input type="number" min="0" matInput formControlName="totalMarks" />
-          </mat-form-field>
-        </div>
-        <!-- <label class="font-weight-bold">Total Marks</label>
+    <div class="col-md-3">
+      <div class="form-group">
+        <mat-form-field>
+          <mat-label>Total Marks</mat-label>
+          <input
+            type="number"
+            min="0"
+            matInput
+            formControlName="totalMarks"
+            disabled="true"
+          />
+        </mat-form-field>
+      </div>
+      <!-- <label class="font-weight-bold">Total Marks</label>
         <input
           type="number"
           class="form-control"
           placeholder="Total Marks"
           formControlName="totalMarks"
         /> -->
-      </div>
     </div>
-    <div class="row mt-4">
-      <div class="col-sm-12">
-        <div class="animated fadeIn">
-          <div class="card">
-            <div class="card-header">
-              <label class="font-weight-bold">
-                {{ classroomId ? classroomId.data.subject.subjectName : '' }}
-              </label>
-              <div class="pl-2 pr-2 float-right">
-                <button
-                  class="btn p-0"
-                  popover="View"
-                  triggers="mouseenter:mouseleave"
-                  (click)="staticModal.show()"
-                >
-                  <span><i class="text-success fa fa-eye"></i> </span>
-                </button>
-                <button
-                  class="btn p-0 ml-2"
-                  popover="Save"
-                  triggers="mouseenter:mouseleave"
-                  (click)="saveQuiz()"
-                >
-                  <span> <i class="text-primary fa fa-save"></i> </span>
-                </button>
-                <button
-                  class="btn p-0 ml-2"
-                  popover="Upload"
-                  triggers="mouseenter:mouseleave"
-                >
-                  <span> <i class="text-warning fa fa-upload"></i> </span>
-                </button>
-              </div>
+  </div>
+  <div class="row mt-4">
+    <div class="col-sm-12">
+      <div class="animated fadeIn">
+        <div class="card">
+          <div class="card-header">
+            <label class="font-weight-bold">
+              {{ classroomId ? classroomId.data.subject.subjectName : '' }}
+            </label>
+            <div class="pl-2 pr-2 float-right">
+              <button
+                class="btn p-0"
+                popover="View"
+                triggers="mouseenter:mouseleave"
+                (click)="staticModal.show()"
+              >
+                <span><i class="text-success fa fa-eye"></i> </span>
+              </button>
+              <button
+                class="btn p-0 ml-2"
+                popover="Save"
+                triggers="mouseenter:mouseleave"
+                (click)="saveQuiz()"
+              >
+                <span> <i class="text-primary fa fa-save"></i> </span>
+              </button>
+              <button
+                class="btn p-0 ml-2"
+                popover="Upload"
+                triggers="mouseenter:mouseleave"
+              >
+                <span> <i class="text-warning fa fa-upload"></i> </span>
+              </button>
             </div>
-            <div class="card-body" formArrayName="questions">
-              <ol class="p-0">
-                <li
-                  class="mb-4"
-                  *ngFor="
-                    let question of getQuestions(quizForm);
-                    let questionNumber = index
-                  "
-                  [formGroupName]="questionNumber"
-                >
-                  <div>
-                    <div class="form-group mb-1 input-group">
-                      <input
-                        type="text"
-                        class="form-control-plaintext border border-secondary rounded p-1"
-                        placeholder="Type your question here..."
-                        formControlName="text"
-                      />
-                      <div class="input-group-append">
-                        <button
-                          class="btn border border-danger rounded"
-                          popover="Delete Question"
-                          triggers="mouseenter:mouseleave"
-                          (click)="deleteQuestion(questionNumber)"
-                        >
-                          <span><i class="text-danger fa fa-trash"></i> </span>
-                        </button>
-                      </div>
+          </div>
+          <div class="card-body" formArrayName="questions">
+            <ol class="p-0">
+              <li
+                class="mb-4"
+                *ngFor="
+                  let question of getQuestions(quizForm);
+                  let questionNumber = index
+                "
+                [formGroupName]="questionNumber"
+              >
+                <div>
+                  <div class="form-group mb-1 input-group">
+                    <input
+                      type="text"
+                      class="form-control-plaintext border border-secondary rounded p-1"
+                      placeholder="Type your question here..."
+                      formControlName="text"
+                    />
+                    <div class="input-group-append">
+                      <button
+                        class="btn border border-danger rounded"
+                        popover="Delete Question"
+                        triggers="mouseenter:mouseleave"
+                        (click)="deleteQuestion(questionNumber)"
+                      >
+                        <span><i class="text-danger fa fa-trash"></i> </span>
+                      </button>
                     </div>
-                    <!-- <div class="form-check form-check-inline">
+                  </div>
+                  <!-- <div class="form-check form-check-inline">
                         <input
                           class="form-check-input"
                           type="radio"
@@ -165,7 +171,7 @@
                         />
                         <label class="form-check-label">MCQ</label>
                       </div> -->
-                    <!-- <div class="form-check form-check-inline">
+                  <!-- <div class="form-check form-check-inline">
                         <input
                           class="form-check-input"
                           type="radio"
@@ -174,78 +180,78 @@
                         />
                         <label class="form-check-label">True/False</label>
                       </div> -->
-                    <div
-                      class="btn-group btn-group-sm d-flex"
-                      btnRadioGroup
-                      formControlName="type"
-                      tooltip="Question Type"
-                    >
-                      <label btnRadio="mcq" class="btn btn-outline-dark">
-                        MCQ
-                      </label>
-                      <label btnRadio="tf" class="btn btn-outline-dark">
-                        T/F
-                      </label>
-                    </div>
-                    <div *ngIf="question.value.type == 'mcq'">
-                      <ol class="list-inline" formArrayName="mcqOptions">
-                        <li
-                          class="list-inline-item ml-4 mt-2"
-                          *ngFor="
-                            let mcqOption of getMcqOptions(question);
-                            let optionNumber = index
-                          "
-                          [formGroupName]="optionNumber"
-                        >
-                          <div class="input-group">
-                            <input
-                              #option
-                              value="{{ optionNumber }}"
-                              name="{{ questionNumber }}"
-                              class="form-check-input"
-                              type="radio"
-                              [checked]="
-                                optionNumber == question.value.mcqCorrectOption
-                              "
-                              (click)="
-                                updateCorrectMcqOption(
-                                  questionNumber,
-                                  option.value
-                                )
-                              "
-                            />
-                            <input
-                              class="form-control-plaintext input-sm border border-secondary rounded p-0 pl-1"
-                              type="text"
-                              formControlName="option"
-                              placeholder="Option {{ optionNumber + 1 }}"
-                            />
-                            <button
-                              class="btn btn-sm border border-danger rounded py-0"
-                              popover="Delete Option"
-                              triggers="mouseenter:mouseleave"
-                              (click)="deleteOption(questionNumber, optionNumber)"
-                            >
-                              <span
-                                ><i class="text-danger fa fa-trash"></i>
-                              </span>
-                            </button>
-                          </div>
-                        </li>
-                        <div class="d-inline">
+                  <div
+                    class="btn-group btn-group-sm d-flex"
+                    btnRadioGroup
+                    formControlName="type"
+                    tooltip="Question Type"
+                  >
+                    <label btnRadio="mcq" class="btn btn-outline-dark">
+                      MCQ
+                    </label>
+                    <label btnRadio="tf" class="btn btn-outline-dark">
+                      T/F
+                    </label>
+                  </div>
+                  <div *ngIf="question.value.type == 'mcq'">
+                    <ol class="list-inline" formArrayName="mcqOptions">
+                      <li
+                        class="list-inline-item ml-4 mt-2"
+                        *ngFor="
+                          let mcqOption of getMcqOptions(question);
+                          let optionNumber = index
+                        "
+                        [formGroupName]="optionNumber"
+                      >
+                        <div class="input-group">
+                          <input
+                            #option
+                            value="{{ optionNumber }}"
+                            name="{{ questionNumber }}"
+                            class="form-check-input"
+                            type="radio"
+                            [checked]="
+                              optionNumber == question.value.mcqCorrectOption
+                            "
+                            (click)="
+                              updateCorrectMcqOption(
+                                questionNumber,
+                                option.value
+                              )
+                            "
+                          />
+                          <input
+                            class="form-control-plaintext input-sm border border-secondary rounded p-0 pl-1"
+                            type="text"
+                            formControlName="option"
+                            placeholder="Option {{ optionNumber + 1 }}"
+                          />
                           <button
-                            class="btn btn-sm btn-secondary border border-secondary py-0 mb-1 ml-4"
-                            popover="Add Option"
+                            class="btn btn-sm border border-danger rounded py-0"
+                            popover="Delete Option"
                             triggers="mouseenter:mouseleave"
-                            (click)="addMcqOption(questionNumber)"
+                            (click)="deleteOption(questionNumber, optionNumber)"
                           >
-                            <span><i class="text-dark fa fa-plus"></i></span>
+                            <span
+                              ><i class="text-danger fa fa-trash"></i>
+                            </span>
                           </button>
                         </div>
-                      </ol>
-                    </div>
-                    <div *ngIf="question.value.type == 'tf'">
-                      <!-- <ol class="list-inline mt-2">
+                      </li>
+                      <div class="d-inline">
+                        <button
+                          class="btn btn-sm btn-secondary border border-secondary py-0 mb-1 ml-4"
+                          popover="Add Option"
+                          triggers="mouseenter:mouseleave"
+                          (click)="addMcqOption(questionNumber)"
+                        >
+                          <span><i class="text-dark fa fa-plus"></i></span>
+                        </button>
+                      </div>
+                    </ol>
+                  </div>
+                  <div *ngIf="question.value.type == 'tf'">
+                    <!-- <ol class="list-inline mt-2">
                           <li class="list-inline-item ml-4 mt-2">
                             <div class="input-group">
                               <input
@@ -269,43 +275,43 @@
                             </div>
                           </li>
                         </ol> -->
-                      <div
-                        class="btn-group btn-group-sm "
-                        btnRadioGroup
-                        formControlName="tfCorrectOption"
-                        tooltip="Correct Option"
-                      >
-                        <label btnRadio="true" class="btn btn-outline-primary">
-                          True
-                        </label>
-                        <label btnRadio="false" class="btn btn-outline-primary">
-                          False
-                        </label>
-                      </div>
+                    <div
+                      class="btn-group btn-group-sm "
+                      btnRadioGroup
+                      formControlName="tfCorrectOption"
+                      tooltip="Correct Option"
+                    >
+                      <label btnRadio="true" class="btn btn-outline-primary">
+                        True
+                      </label>
+                      <label btnRadio="false" class="btn btn-outline-primary">
+                        False
+                      </label>
                     </div>
                   </div>
-                </li>
-              </ol>
-              <div class="row mt-4">
-                <div class="col-sm-12">
-                  <button
-                    class="btn btn-secondary btn-lg btn-block pt-0 pb-0"
-                    popover="Add Question"
-                    triggers="mouseenter:mouseleave"
-                    (click)="addQuestion()"
-                  >
-                    <span><i class="text-dark fa fa-plus"></i> </span>
-                  </button>
                 </div>
+              </li>
+            </ol>
+            <div class="row mt-4">
+              <div class="col-sm-12">
+                <button
+                  class="btn btn-secondary btn-lg btn-block pt-0 pb-0"
+                  popover="Add Question"
+                  triggers="mouseenter:mouseleave"
+                  (click)="addQuestion()"
+                >
+                  <span><i class="text-dark fa fa-plus"></i> </span>
+                </button>
               </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-  </form>
-  
-  <!-- <div
+  </div>
+</form>
+
+<!-- <div
     class="modal fade"
     bsModal
     #staticModal="bs-modal"
@@ -336,4 +342,3 @@
       </div>
     </div>
   </div> -->
-  
